Adicionando páginas ao projeto. Finalizando projeto.

--- a/Site/pages/sobre.html
+++ b/Site/pages/sobre.html
@@ -22,15 +22,16 @@
     <div class="Menu" id="Menu">
         <ul>
             <li><a href="../index.html">INÍCIO</a></li>
-            <li id="dropdown"><a href="#">CATÁLOGO</a>
+            <li id="dropdown"><a href="../pages/catalogo-download.html">CATÁLOGO</a>
                 <ul class="menu-dropdown">
                     <li><a href="../pages/limestone-grey.html">Limestone Grey</a></li>
                     <li><a href="../pages/limestone-cream.html">Limestone Cream</a></li>
                     <li><a href="../pages/limestone-graffiata-dark-wood.html">Limestone Graffiata Dark Wood</a></li>
-                    <li><a href="#">Grafiatta Blue Wood</a></li>
-                    <li><a href="#">Piscinas</a></li>
+                    <li><a href="../pages/grafiatta-blue-wood.html">Limestone Grafiatta Blue Wood</a></li>
+                    <li><a href="../pages/piscinas.html">Piscinas</a></li>
                 </ul>
             </li>
+            <li><a href="../pages/contato.html">CONTATOS</a></li>
             <li><a href="#">SOBRE NÓS</a></li>
         </ul>
     </div>
@@ -42,7 +43,7 @@
 
 <footer class="footer">
     <div class="logo-footer">
-        <a href="../index.html"> <img src="../img/Logo.jpg"> </a>
+        <a href="../index.html"> <img src="../img/Footer.png"> </a>
         <p> &copy; Copyright 2024 - Calcare</p>
     </div>
 </footer>
