Finalizando projeto parte 1. Falta apenas configurar o css da Página sobre a empresa.

--- a/Site/pages/sobre.html
+++ b/Site/pages/sobre.html
@@ -32,13 +32,20 @@
                 </ul>
             </li>
             <li><a href="../pages/contato.html">CONTATOS</a></li>
-            <li><a href="#">SOBRE NÓS</a></li>
+            <li><a href="../pages/sobre.html">SOBRE NÓS</a></li>
         </ul>
     </div>
 </header>
 
 <section class="body-sobre">
-
+    <div class="apresentacao">
+        <h2>Quem somos nós?</h2>
+        <p>Bem-vindos à Calcare, uma empresa líder na fabricação de pedras de calcário de alto padrão. Desde nossa fundação em 1993, temos nos dedicado apaixonadamente à excelência em cada detalhe de nossos produtos. Nossa missão é oferecer soluções de revestimento que combinem beleza, durabilidade e sustentabilidade.</p>
+        <p>Na Calcare, cada pedra é cuidadosamente selecionada e processada para atender aos mais altos padrões de qualidade. Nosso compromisso com a inovação e a tecnologia nos permite criar produtos únicos que agregam valor estético e funcional a qualquer projeto.</p>
+        <p>Com uma equipe de especialistas experientes e dedicados, estamos sempre prontos para atender às necessidades específicas de nossos clientes, proporcionando soluções personalizadas e serviço excepcional. Nossa dedicação à satisfação do cliente é o que nos impulsiona a alcançar a excelência em tudo o que fazemos.</p>
+        <p>Além disso, na Calcare, somos comprometidos com práticas sustentáveis. Nosso processo de fabricação é projetado para minimizar o impacto ambiental, garantindo que nossos produtos sejam não apenas bonitos, mas também ecologicamente responsáveis.</p>
+        <p>Seja para projetos residenciais, comerciais ou industriais, a Calcare é a escolha confiável para quem busca qualidade, elegância e compromisso ambiental. Estamos ansiosos para colaborar com você e tornar sua visão uma realidade. Experimente a excelência da Calcare e transforme seus espaços hoje mesmo.</p>
+    </div>
 </section>
 
 <footer class="footer">
