--- a/Site/pages/catalogo-download.html
+++ b/Site/pages/catalogo-download.html
@@ -32,7 +32,7 @@
                 </ul>
             </li>
             <li><a href="../pages/contato.html">CONTATOS</a></li>
-            <li><a href="#">SOBRE NÓS</a></li>
+            <li><a href="../pages/sobre.html">SOBRE NÓS</a></li>
         </ul>
     </div>
 </header>
