Finalização do site da Calcare

--- a/Site/pages/contato.html
+++ b/Site/pages/contato.html
@@ -47,8 +47,18 @@
 
         <section class="texto contato">
             <p>Se você está interessado em descobrir mais sobre nossas pedras de calcário de alto padrão e como elas podem elevar o seu projeto para novos patamares de excelência, estamos aqui para ajudar. Fale conosco através de um desses contatos seguir: </p>
-            <p><img src="../img/whatsapp-icon.png"> Marcos: <a href="https://api.whatsapp.com/send?phone=5511963595108" target="_blank">+55 11 96359-5108</a></p>
-            <p><img src="../img/whatsapp-icon.png"> Israel: <a href="https://api.whatsapp.com/send?phone=5511944634418" target="_blank">+55 11 94463-4418</a></p>
+            <div>
+                <img src="../img/whatsapp-icon.png">
+                <p>Marcos: <a href="https://api.whatsapp.com/send?phone=5511963595108" target="_blank">+55 11 96359-5108</a></p>
+            </div>
+            <div>
+                <img src="../img/whatsapp-icon.png">
+                <p> Israel: <a href="https://api.whatsapp.com/send?phone=5511944634418" target="_blank">+55 11 94463-4418</a></p>
+            </div>
+            <div>
+                <img src="../img/instagram.png">
+                <p>@calcare.stone</p>
+            </div>
         </section>
 
     </div>
